--- a/BasicSkill/algorithm/图.md
+++ b/BasicSkill/algorithm/图.md
@@ -2,15 +2,19 @@
 
 图是一种`非线性数据结构`。它的表示有以下几种:
 
+1. 邻接矩阵
+2. 邻接表
+3. 关联矩阵
+
 * `邻接矩阵`
 
-邻接矩阵是表示图的常用方法, 用二维数组来表示, 数组的每个下标对应每个点。当两个点有连线则二维数组的值为 1, 否则二维数组的值为 0。但是这种表示方法会照成存储空间的浪费(因存在大量 0)。
+邻接矩阵是表示图的常用方法, `用二维数组来表示`, 数组的每个下标对应每个点。当两个点有连线则二维数组的值为 1, 否则二维数组的值为 0。但是这种表示方法会照成存储空间的浪费(因存在大量 0)。
 
 ![](http://with.muyunyun.cn/79f5520b6028aa16491649c846430b04.jpg-300)
 
 * `邻接表`
 
-如下图: 左侧为存储的顶点, 右侧为与之想对应的点, 后文会采用这种方式实现图。
+如下图: `左侧为存储的顶点, 右侧为与之想对应的点`, 后文会采用这种方式实现图。
 
 ![](http://with.muyunyun.cn/0a1d5ab4a96e83dca8c7aafc948e2f4b.jpg-300)
 
@@ -74,7 +78,7 @@ graph.addEdge('E', 'I')
 
 使用自定义打印函数 graph.log(), 打印结果如下, 结果符合预期
 
-```
+```js
 A -> B C D
 B -> A E F
 C -> A D G
@@ -88,19 +92,16 @@ I -> E
 
 ### 广度优先遍历(BFS)
 
-顾名思义, 广度优先即横向优先, 示意图如下:
+顾名思义, 广度优先即横向优先, 英文名为 `breadth first search`(BFS), 它示意图如下:
 
 ![](http://with.muyunyun.cn/4547193af1645f33359e875559092c6b.jpg-200)
 
-思想: 用到了队列的思想。思路如下: (标白: 未发现；标灰: 已找寻；))
+思想: 用到了`队列`的思想。思路如下: (标白: 未发现; 标灰: 已找寻)
 
-* 创建队列 u, 将标灰的顶点插入队列
-
-* 若队列 u 不为空
-
-  * 从队列取出值 v
-
-  * 将 v 的相邻节点标灰并插入队列 u
+* 创建队列 u, 将标灰的顶点插入队列;
+* 若队列 u 不为空;
+  * 从队列取出值 v;
+  * 将 v 的相邻节点标灰并插入队列 u;
 
 代码中用到队列相关的方法可参考 [队列](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/队列.md)
 
@@ -175,7 +176,7 @@ graph.bfs('A', (shiftQueue) => {
 })
 ```
 
-打印结果为 A B C D E F G H I, 符合预期。
+打印结果为 `A B C D E F G H I`, 符合预期。
 
 #### 广度优先遍历求最短路径
 
@@ -266,7 +267,7 @@ A - B - E - I
 
 ### 深度优先遍历(DFS)
 
-深度优先遍历用到了栈的思想。示意图如下:
+深度优先遍历用到了栈的思想。英文名为 `depth first search`(DFS), 其示意图如下:
 
 ![](http://with.muyunyun.cn/b4fa9641c9f086cf2702f868b283dbee.jpg-200)
 
@@ -309,4 +310,4 @@ graph.dfs('A', (shiftQueue) => {
 
 #### 深度优先遍历的应用
 
-深度优先遍历可以用在拓扑排序(需要按照一定顺序完成任务)中, 这里就不展开了。
+深度优先遍历可以用在拓扑排序(需要按照一定顺序完成任务)中, 这里先不展开了。
