--- a/BasicSkill/algorithm/栈.md
+++ b/BasicSkill/algorithm/栈.md
@@ -85,3 +85,10 @@ function isBalance(symbol) {
   return tag
 }
 ```
+
+### 扩展: 栈和递归的紧密关系
+
+递归的写法本质上都是运用栈的思想。这里列几道 leetcode 上的题目作为参考
+
+* [Binary Tree Preorder Traversal]([Analyze](https://github.com/MuYunyun/blog/blob/master/LeetCode/144.Binary_Tree_Preorder_Traversal/README.md))
+* [Flatten Nested List Iterator](https://github.com/MuYunyun/blog/blob/master/LeetCode/341.Flatten_Nested_List_Iterator/README.md)
