--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -27,3 +27,8 @@ localStorage.debug = 'slate:editor:runAll'
 editor.value.toJSON()
 
 ### the time when to paste
+
+### 有序列表的设计
+
+1. 小圆点 + 数字作为一个结构;
+2. 会对当前节点的后续同级节点以及子节点
