--- a/BasicSkill/algorithm/二叉树.md
+++ b/BasicSkill/algorithm/二叉树.md
@@ -4,12 +4,12 @@
 
 这幅图中有如下概念:
 
-* 根节点: 一棵树最顶部的节点
-* 内部节点: 在它上面还有其它内部节点或者叶节点的节点
-* 叶节点: 处于一棵树根部的节点
-* 子树: 由树中的内部节点和叶节点组成
+* `根节点`: 一棵树最顶部的节点
+* `内部节点`: 在它上面还有其它内部节点或者叶节点的节点
+* `叶节点`: 处于一棵树根部的节点
+* `子树`: 由树中的内部节点和叶节点组成
 
-此外这棵树是二叉树（树中最多有两个分支）, 同时它也是二叉搜索树（左侧子节点的数字小于父节点, 右侧子节点的数字大于父节点）
+此外这棵树是`二叉树`(树中最多有两个分支), 同时它也是`二叉搜索树`(左侧子节点的数字小于父节点, 右侧子节点的数字大于父节点)
 
 ### 二叉搜索树的实现
 
@@ -202,7 +202,11 @@ tree.insert(6)
 
 ![](http://with.muyunyun.cn/212607e3b24b52c0df959902ed8e4b1f.jpg-300)
 
-三种遍历的实现方式大同小异, 可在上面代码中观察到实现的差异。
+三种遍历的实现方式大同小异, 可在上面代码中观察到实现的差异。如下是 Leetcode 中对应三种不同遍历方式的题目:
+
+* [Binary Tree Preorder Traversal](https://github.com/MuYunyun/blog/blob/master/LeetCode/144.Binary_Tree_Preorder_Traversal/README.md)
+* [Binary Tree Inorder Traversal](https://github.com/MuYunyun/blog/blob/master/LeetCode/94.Binary_Tree_Inorder_Traversal/README.md)
+* [Binary Tree Postorder Traversal](https://github.com/MuYunyun/blog/blob/master/LeetCode/145.Binary_Tree_Postorder_Traversal/README.md)
 
 ### remove 的几种情况
 
