--- a/BasicSkill/css/css小书/背景与边框.md
+++ b/BasicSkill/css/css小书/背景与边框.md
@@ -3,7 +3,7 @@
 以下为与背景与边框相关比较有用的属性。
 
 * `background-origin`: 属性值有 `border-box/padding-box/content-box`。默认为 `padding-box`。
-* `background-clip`: 属性值有 `border-box/padding-box/content-box`。默认值为 `border-box`。
+* `background-clip`: The background-clip CSS property sets whether an element's background extends underneath its border box, padding box, or content box. 属性值有 `border-box/padding-box/content-box`。默认值为 `border-box`。
 
 #### 图片自适应
 
