--- a/BasicSkill/algorithm/队列.md
+++ b/BasicSkill/algorithm/队列.md
@@ -28,9 +28,15 @@ Queue.prototype.clear = function() {
 }
 ```
 
-接着看下以下两种特殊队列:
+### 队列知识延伸
 
-### 最小优先队列
+使用队列的一个典型场景是`树的广度遍历(BFS)`, 以下从 leetcode 中摘录了一些题目:
+
+* [Binary Tree Level Order Traversal](https://github.com/MuYunyun/blog/blob/master/LeetCode/102.Binary_Tree_Level_Order_Traversal/README.md)
+
+### 两种特殊队列
+
+#### 最小优先队列
 
 最小优先队列在生活中的例子: 比如普通用户上医院需要排队挂号, 但是具有 VIP 的用户能'插队'办理业务。用代码实现如下:
 
@@ -79,7 +85,7 @@ queue.print() // 李四 赵五 张三
 
 可以看到具有相同权限的李四和赵五依旧遵守队列的先进先出原则, 同时排在了张三的前面。
 
-### 循环队列
+#### 循环队列
 
 循环队列以击鼓传花为例, 代码实现如下:
 
