--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -32,3 +32,8 @@ editor.value.toJSON()
 
 1. 小圆点 + 数字作为一个结构;
 2. 会对当前节点的后续同级节点以及子节点
+
+### slate 开发坑点
+
+* 一种方式开发完之后, 在某些情况下是不满足的, 因此需要返工。
+  * example: 输入 @、# 进行筛选最初是使用 set 方式实现的, 一开始这样设计是没问题的, 但是考虑未来在多人协作过程中会造成一份数据的互相影响, 因此将其重构调整为将筛选的数据绕开 set 的方式, 取而代之的是外面传递进来。
