--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -31,7 +31,16 @@ editor.value.toJSON()
 ### 有序列表的设计
 
 1. 小圆点 + 数字作为一个结构;
-2. 会对当前节点的后续同级节点以及子节点
+2. 点击有序列表, 当前节点的同级兄弟节点都会变为有序列表;
+3. 点击可以取消有序列表;
+4. 当在有序列表的节点建立兄弟节点或子节点时, 自动设置为有序列表;
+5. 子节点规则 1 —— 1.1 —— 1.1.1 —— 1.1.1.1;
+6. 当把某个子节点从有序节点变为无序节点时, 该节点的兄弟节点也变为无序; 该节点的子节点从 1 开始计数;
+7. 原则: 兄弟节点必须都为有序或无序, 子节点可以无序也可以有序;
+
+结论:
+
+1. 因此对 selection 是不敏感的, 即操作一个都会同时对同层级所有节点生效;
 
 ### slate 开发坑点
 
