docs: dep insight in slate

--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -1,10 +1,10 @@
-### 富文本编辑器
+### 富文本编辑器的层级
 
 * L0
 * L1: 兼容性层面的优化, 自行实现 undo/redo 栈;
 * L2: 移动端/国际化适配;
 
-> 学习: 也许我不会得到他的一些人性化帮助，但也不会被他提前做的假设限制住!
+> 一个好的框架设计: 尽量少的提前做的假设限制!
 
 #### L0
 
@@ -13,20 +13,16 @@
 
 > 另外一种方法是内嵌 iframe, 并将其 designmode 属性设置为 true。(有跨域问题, 日后填坑)
 
-### link
+### Slate 框架
 
-* [编辑器初体验](https://zhuanlan.zhihu.com/p/90931631)
+### 调试
 
-### question
+可以使用 `editor.value.toJSON()` 打印 tree 结构, 便于调试;
 
-What's difference between `isCollapsed` and `isExpanded`: is it selected by cursor;
+### slate 设计模式
 
-localStorage.debug = 'slate:editor:run'
-localStorage.debug = 'slate:editor:runAll'
-
-editor.value.toJSON()
-
-### the time when to paste
+* 兜底原则
+  * `normalizeNode`, 除指定节点外都走该 normalize 机制;
 
 ### 有序列表的设计
 
@@ -46,3 +42,7 @@ editor.value.toJSON()
 
 * 一种方式开发完之后, 在某些情况下是不满足的, 因此需要返工。
   * example: 输入 @、# 进行筛选最初是使用 set 方式实现的, 一开始这样设计是没问题的, 但是考虑未来在多人协作过程中会造成一份数据的互相影响, 因此将其重构调整为将筛选的数据绕开 set 的方式, 取而代之的是外面传递进来。
+
+### link
+
+* [编辑器初体验](https://zhuanlan.zhihu.com/p/90931631)
