--- a/BasicSkill/life/华硕路由器.md
+++ b/BasicSkill/life/华硕路由器.md
@@ -21,10 +21,11 @@ pdd_2G_5G
 pdd_cloud
 ```
 
-router.asus.com
+初始 web 管理 IP 变成 `192.168.2.1`
 
 ### 参考资料
 
 * [华硕路由器刷梅林固件，挂载 SS](https://www.chenshaowen.com/blog/asus-router-brush-merlin-firmware-and-mount-ss.html)
 * [koolshare.cn](https://koolshare.cn/forum.php?mod=viewthread&tid=139322)
 * [视频教学](https://www.youtube.com/watch?v=xdIddRVE8qQ)
+* [使用手册](https://www.asus.com.cn/Networking/RT-AC88U/HelpDesk_Manual/)
