--- a/BasicSkill/设计模式/职责链模式.md
+++ b/BasicSkill/设计模式/职责链模式.md
@@ -68,7 +68,7 @@ const order200 = function(orderType, pay, stock) {
 }
 
 const orderCommon = function(orderType, pay, stock) {
-  if (orderType === 3 && stock > 0) {
+  if ((orderType === 3 || !pay) && stock > 0) {
     console.log('普通购买, 无优惠券')
   } else {
     console.log('库存不够, 无法购买')
@@ -99,7 +99,7 @@ const order200 = function(orderType, pay, stock) {
 }
 
 const orderCommon = function(orderType, pay, stock) {
-  if (orderType === 3 && stock > 0) {
+  if ((orderType === 3 || !pay) && stock > 0) {
     console.log('普通购买, 无优惠券')
   } else {
     console.log('库存不够, 无法购买')
@@ -156,7 +156,7 @@ const order200 = function(orderType, pay, stock) {
 }
 
 const orderCommon = function(orderType, pay, stock) {
-  if (orderType === 3 && stock > 0) {
+  if ((orderType === 3 || !pay) && stock > 0) {
     console.log('普通购买, 无优惠券')
   } else {
     console.log('库存不够, 无法购买')
