--- a/BasicSkill/algorithm/动态规划.md
+++ b/BasicSkill/algorithm/动态规划.md
@@ -1,6 +1,6 @@
 ### 什么是动态规划
 
-动态规划和分而治之([快速排序](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/排序算法/快速排序.md)、[归并排序](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/排序算法/归并排序.md)) 的思想大方面讲都属于递归的范畴。但动态规划是将一个大问题拆分成有联系的子问题, 分而治之则是将一个大问题拆分成互相间没有关系的子问题。
+`动态规划`和`分而治之`([快速排序](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/排序算法/快速排序.md)、[归并排序](https://github.com/MuYunyun/blog/blob/master/BasicSkill/algorithm/排序算法/归并排序.md)) 的思想大方面讲都属于递归的范畴。但动态规划是将一个大问题拆分成有联系的子问题, 分而治之则是将一个大问题拆分成互相间没有关系的子问题。
 
 ### 动态规划解题思路
 
