fix: link wrong

--- a/React/相关技术栈/富文本编辑器.md
+++ b/React/相关技术栈/富文本编辑器.md
@@ -43,6 +43,20 @@
 * 一种方式开发完之后, 在某些情况下是不满足的, 因此需要返工。
   * example: 输入 @、# 进行筛选最初是使用 set 方式实现的, 一开始这样设计是没问题的, 但是考虑未来在多人协作过程中会造成一份数据的互相影响, 因此将其重构调整为将筛选的数据绕开 set 的方式, 取而代之的是外面传递进来。
 
+### small tip
+
+small tip in slate editor
+
+When input b after a in page #slate #editor.
+
+```js
+console.log(editor.value.texts.get(0))   //  'a';
+
+requestAnimationFrame(() => {
+  console.log(editor.value.texts.get(0)) // 'ab'
+})
+```
+
 ### link
 
 * [编辑器初体验](https://zhuanlan.zhihu.com/p/90931631)
