--- a/React/Component_Design/重新认识受控与非受控组件.md
+++ b/React/Component_Design/重新认识受控与非受控组件.md
@@ -54,7 +54,9 @@ function Demo() {
 
 尽管此时 Input 组件本身是一个受控组件, 但与之相对的调用方失去了更改 Input 组件值的`控制权`, 所以对调用方而言, Input 组件是一个非受控组件。值得一提的是, `以非受控组件的使用方式去调用受控组件`是一种反模式, 在下文中会分析其中的弊端。
 
-如何做到不管对于组件提供方还是调用方 Input 组件都为受控组件呢? 提供方让出控制权即可, 调整代码如下[codesandbox](https://codesandbox.io/s/clever-montalcini-kysbg):
+如何做到不管对于组件提供方还是调用方 Input 组件都为受控组件呢? 提供方让出控制权即可, 调整代码如下
+
+[codesandbox](https://codesandbox.io/s/clever-montalcini-kysbg)
 
 ```js
 // 组件提供方
