--- a/BasicSkill/efficiency/沟通的智慧.md
+++ b/BasicSkill/efficiency/沟通的智慧.md
@@ -15,6 +15,17 @@
 蹙蹙靡骋，字字斟酌，不若侃侃如也，融融自乐
 怡然佳句，返璞去饰，贵「真」矣！
 
+#### 如无必要,勿增实体
+
+如何根据团队主要目标制定项目目标呢？其中一个有效方法是：多问几个「为什么。
+
+* xxx 解决了项目或团队中遇到的什么问题（`现状分析，基础质量，迭代效率`）？
+* 如果不投入人力研发 xxx ，会遇到哪些问题（`场景演绎`）？
+* 研讨会开下来，框架使用者反馈如何（`合作方反馈，满意度`）？
+* 有多少团队/平台/业务线/项目可能使用 xxx （`调用量`）？ 他们为什么愿意用，我们如何推广（`影响力`）？
+* xxx 框架有哪些竞品？ 是否有替代品（`行业价值`）？
+* 一期项目开发的里程碑是什么（`指标与进展`）？做到最终形态项目是怎样的（`「终局观」意识`）？
+
 ### 个人感悟
 
 多使用小黄鸭笔记法, 就能理出眉目, 理逻辑的时候可能觉得浪费时间, 但是这往往是解决问题最高效的方法。
