docs: update hooks

--- a/BasicSkill/fe_cloud/用户体验指标.md
+++ b/BasicSkill/fe_cloud/用户体验指标.md
@@ -12,3 +12,5 @@
 |  FID  |    First Input Delay     |  首次输入延迟  |         |
 |  TBT  |     Total Block Time     |   阻塞总时间   |         |
 |  SI   |       Speed Index        |  内容展现速度  |         |
+
+- [] [to read](https://mp.weixin.qq.com/s/ESOHtwz3jCEybAN196R-rg)
