--- a/React/从0到1实现React/8.HOC探索.md
+++ b/React/从0到1实现React/8.HOC探索.md
@@ -16,14 +16,13 @@ y = f(x),
 
 #### 属性代理(Props Proxy)
 
-这类实现也是装饰器模式的一种运用, 通过装饰器函数给原来函数赋能。下面例子在装饰器函数中给被装饰的组件传递了额外的属性 { a: 1, b: 2 }。
+属性代理是装饰器模式的一种运用, 通过装饰器函数给原来函数赋能。下面例子在装饰器函数中给被装饰的组件传递了额外的属性 `{ a: 1, b: 2 }`。
 
 > 声明: 下文所展示的 demo 均已在 [cpreact](https://github.com/MuYunyun/cpreact) 测试通过
 
 ```js
 function ppHOC(WrappedComponent) {
   return class extends Component {
-
     render() {
       const obj = { a: 1, b: 2 }
       return (
