--- a/BasicSkill/basis/移动端场景知识.md
+++ b/BasicSkill/basis/移动端场景知识.md
@@ -130,3 +130,9 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 * 在弹框类组件中使用 input 光标会消失
 
 见 [issue](https://github.com/ionic-team/cordova-plugin-ionic-webview/issues/449#issuecomment-541907141)
+
+### 移动开发指南
+
+* H5: 需要发版
+* 组件包: 不需要发版
+* 原生: 性能高
