--- a/LeetCode/23.Merge_k_Sorted_Lists.md
+++ b/LeetCode/23.Merge_k_Sorted_Lists.md
@@ -82,9 +82,7 @@ var mergeTwoLists = function(curList, compareList) {
 
 由于在 JavaScrit 中没有封装好的优先队列, 在此先进行封装`优先队列函数`(最小堆)。
 
-
-
-```js
+<!-- ```js
 Input:
 [
   1->4->5,
@@ -92,5 +90,130 @@ Input:
   2->6
 ]
 Output: 1->1->2->3->4->4->5->6
+``` -->
+
+```js
+var len
+
+/**
+ * to build min heapify from bottom to top;
+ * the last subscript's parent subscript is Math.floor((len - 1) / 2)
+ */
+var buildMinHeapify = function(arr) {
+  len = arr.length
+
+  for (let i = Math.floor((len - 1) / 2); i >= 0; i--) {
+    siftDown(arr, i)
+  }
+  return arr
+}
+
+/**
+ * Insert a value into heap. It's an operation called sift up.
+ */
+var enqueue = function(arr, value) {
+  arr.splice(len, 0, value)
+  len++
+  siftUp()
+}
+
+/**
+ * to keep min heap, it's an operation called sift up.
+ */
+var siftUp = function() {
+  let enqueueValSubscript = len - 1
+  let parent = Math.floor(enqueueValSubscript / 2)
+  while (parent > 0 && arr[parent] > arr[enqueueValSubscript]) {
+    swap(arr, parent, enqueueValSubscript)
+    enqueueValSubscript = parent
+    parent = Math.floor(enqueueValSubscript / 2)
+  }
+}
+
+/*
+ * to pick the smallest or the biggest element from the heap and return it;
+ * Then t'll swap the endest element with the first element, and then keep the
+ * heap length reduce one. If so, only do once sift down operation in the first element to keep heapify.
+ */
+var dequeue = function() {
+  const maxValue = arr[0]
+  swap(arr, len - 1, 0)
+  siftDown(arr, 0)
+  return maxValue
+}
+
+/**
+ * to keep min heap, it's an operation called sift down.
+ */
+var siftDown = function(arr, i) {
+  const left = 2 * i + 1
+  const right = 2 * i + 2
+  let minSubscript = i
+
+  if (left < len && arr[left] < arr[minSubscript]) {
+    minSubscript = left
+  }
+
+  if (right < len && arr[right] < arr[minSubscript]) {
+    minSubscript = right
+  }
+
+  if (minSubscript !== i) {
+    swap(arr, minSubscript, i)
+    siftDown(arr, minSubscript)
+  }
+}
+
+// swap two value in arr
+var swap = function(arr, pointOne, pointTwo) {
+  const tmp = arr[pointOne]
+  arr[pointOne] = arr[pointTwo]
+  arr[pointTwo] = tmp
+}
 ```
 
+Test case one:
+
+```js
+input: var arr = [5, 2, 7, 3, 1, 8, 4]
+
+buildMaxHeapify(arr) // [8, 3, 7, 2, 1, 5, 4]
+           8                                           8
+        ↙     ↘          enqueue(arr, 6)            ↙     ↘
+     3          7        --------------->         6          7
+  ↙    ↘      ↙   ↘                            ↙    ↘      ↙   ↘
+2        1  5       4                        3        1   5       4
+                                           ↙
+                                         2
+
+                                     7
+        return 8                  ↙     ↘
+        dequeue()               6         5
+    ---------------->        ↙    ↘     ↙   ↘
+                           3       1   2      4
+```
+
+
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+/**
+ * @param {ListNode[]} lists
+ * @return {ListNode}
+ */
+var mergeKLists = function(lists) {
+  let result = lists[0] || null
+
+  for (let i = 1; i < lists.length; i++) {
+    const compareList = lists[i]
+    result = mergeTwoLists(result, compareList)
+  }
+  return result
+}
+```
