--- a/LeetCode/23.Merge_k_Sorted_Lists.md
+++ b/LeetCode/23.Merge_k_Sorted_Lists.md
@@ -138,6 +138,7 @@ var siftUp = function() {
 var dequeue = function() {
   const maxValue = arr[0]
   swap(arr, len - 1, 0)
+  len--
   siftDown(arr, 0)
   return maxValue
 }
@@ -177,20 +178,28 @@ Test case one:
 ```js
 input: var arr = [5, 2, 7, 3, 1, 8, 4]
 
-buildMaxHeapify(arr) // [8, 3, 7, 2, 1, 5, 4]
-           8                                           8
-        ↙     ↘          enqueue(arr, 6)            ↙     ↘
-     3          7        --------------->         6          7
-  ↙    ↘      ↙   ↘                            ↙    ↘      ↙   ↘
-2        1  5       4                        3        1   5       4
-                                           ↙
-                                         2
+           8
+        ↙     ↘
+     3          7
+  ↙    ↘      ↙   ↘
+2        1  5       4
 
-                                     7
-        return 8                  ↙     ↘
-        dequeue()               6         5
+
+buildMinHeapify(arr) // [1, 2, 4, 3, 5, 8, 7]
+
+           1                                           1
+        ↙     ↘          enqueue(arr, 6)            ↙     ↘
+     2          4        --------------->         2          4
+  ↙    ↘      ↙   ↘                            ↙    ↘      ↙   ↘
+3        5  8       7                        3        5  8        7
+                                           ↙
+                                         6
+
+                                     2
+        return 1                  ↙     ↘
+        dequeue()               3         4
     ---------------->        ↙    ↘     ↙   ↘
-                           3       1   2      4
+                           6       5   8      7
 ```
 
 
