--- a/LeetCode/104.Maximum_Depth_of_Binary_Tree.md
+++ b/LeetCode/104.Maximum_Depth_of_Binary_Tree.md
@@ -1,15 +1,35 @@
-### tip
+### 104. Maximum Depth of Binary Tree
 
-感想: 递归的思路还是精妙
+Given a binary tree, find its maximum depth.
+
+The maximum depth is the number of nodes along the longest path from the root node down to the farthest leaf node.
+
+Note: A leaf is a node with no children.
+
+Example:
+
+Given binary tree [3,9,20,null,null,15,7],
+
+```js
+    3
+   / \
+  9  20
+    /  \
+   15   7
+
+return its depth = 3.
+```
 
 ### Analyze
+
+Way1: recursive
 
 ```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
- *     this.val = val;
- *     this.left = this.right = null;
+ *   this.val = val;
+ *   this.left = this.right = null;
  * }
  */
 /**
@@ -20,3 +40,7 @@ var maxDepth = function (root) {
   return root === null ? 0 : Math.max(maxDepth(root.left), maxDepth(root.right)) + 1
 };
 ```
+
+### Sister title
+
+111
