--- a/LeetCode/23.Merge_k_Sorted_Lists.md
+++ b/LeetCode/23.Merge_k_Sorted_Lists.md
@@ -77,20 +77,10 @@ var mergeTwoLists = function(curList, compareList) {
 
 * 将数组中的队列加入进优先队列(基于最小堆);
 * 如果当前优先队列不为空:
-  * 取出当前优先队列顶部队列元素(最小值), 拼接到输出队列中;
+  * 取出当前`优先队列顶部队列元素`(最小值), 拼接到`输出队列`中;
   * 同时在优先队列插入取出的顶部队列元素的下一个值;
 
 由于在 JavaScrit 中没有封装好的优先队列, 在此先进行封装`优先队列函数`(最小堆)。
-
-<!-- ```js
-Input:
-[
-  1->4->5,
-  1->3->4,
-  2->6
-]
-Output: 1->1->2->3->4->4->5->6
-``` -->
 
 ```js
 var len
@@ -184,7 +174,6 @@ input: var arr = [5, 2, 7, 3, 1, 8, 4]
   ↙    ↘      ↙   ↘
 2        1  5       4
 
-
 buildMinHeapify(arr) // [1, 2, 4, 3, 5, 8, 7]
 
            1                                           1
@@ -202,27 +191,4 @@ buildMinHeapify(arr) // [1, 2, 4, 3, 5, 8, 7]
                            6       5   8      7
 ```
 
-
-
-```js
-/**
- * Definition for singly-linked list.
- * function ListNode(val) {
- *     this.val = val;
- *     this.next = null;
- * }
- */
-/**
- * @param {ListNode[]} lists
- * @return {ListNode}
- */
-var mergeKLists = function(lists) {
-  let result = lists[0] || null
-
-  for (let i = 1; i < lists.length; i++) {
-    const compareList = lists[i]
-    result = mergeTwoLists(result, compareList)
-  }
-  return result
-}
-```
+在 JavaScript 中使用优先队列成本相对较高, 暂时不考虑。
