--- a/LeetCode/111.Minimum_Depth_of_Binary_Tree.md
+++ b/LeetCode/111.Minimum_Depth_of_Binary_Tree.md
@@ -28,8 +28,8 @@ Way1: recursive
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
- *     this.val = val;
- *     this.left = this.right = null;
+ *   this.val = val;
+ *   this.left = this.right = null;
  * }
  */
 /**
@@ -38,7 +38,12 @@ Way1: recursive
  */
 var minDepth = function(root) {
   if (!root) return 0
-  return Math.min(minDepth(root.left), minDepth(root.right)) + 1
+  const leftRootMinDepth = minDepth(root.left)
+  const rightRootMinDepth = minDepth(root.right)
+  if (leftRootMinDepth === 0 || rightRootMinDepth === 0) {
+    return Math.max(leftRootMinDepth, rightRootMinDepth) + 1
+  }
+  return Math.min(leftRootMinDepth, rightRootMinDepth) + 1
 };
 ```
 
