--- a/LeetCode/111.Minimum_Depth_of_Binary_Tree.md
+++ b/LeetCode/111.Minimum_Depth_of_Binary_Tree.md
@@ -24,6 +24,16 @@ return its minimum depth = 2.
 
 Way1: recursive
 
+陷阱: 需注意的是其中一个子节点为空, 另外一个子节点不为空, 需要以不为空的子节点那边来计数。比如
+
+```js
+    0
+   / \
+  1  null
+```
+
+此时最短路径为 2 而不是 1。
+
 ```js
 /**
  * Definition for a binary tree node.
