--- a/LeetCode/100.Same_Tree.md
+++ b/LeetCode/100.Same_Tree.md
@@ -1,4 +1,44 @@
-虽然是一道 easy 难度的题目, 但是可能状态不太好, 下次再重新 A 下。
+### 100. Same Tree
+
+Given two binary trees, write a function to check if they are the same or not.
+
+Two binary trees are considered the same if they are structurally identical and the nodes have the same value.
+
+Example 1:
+
+```js
+Input:     1         1
+          / \       / \
+         2   3     2   3
+
+        [1,2,3],   [1,2,3]
+
+Output: true
+```
+
+Example 2:
+
+```js
+Input:     1         1
+          /           \
+         2             2
+
+        [1,2],     [1,null,2]
+
+Output: false
+```
+
+Example 3:
+
+```js
+Input:     1         1
+          / \       / \
+         2   1     1   2
+
+        [1,2,1],   [1,1,2]
+
+Output: false
+```
 
 ### Analyze
 
@@ -28,5 +68,4 @@ var isSameTree = function (p, q) {
     return false
   }
 };
-
 ```
