--- a/LeetCode/101.Symmetric_Tree.md
+++ b/LeetCode/101.Symmetric_Tree.md
@@ -1,3 +1,33 @@
+### 101. Symmetric Tree
+
+Given a binary tree, check whether it is a mirror of itself (ie, symmetric around its center).
+
+For example, this binary tree [1,2,2,3,4,4,3] is symmetric:
+
+```js
+    1
+   / \
+  2   2
+ / \ / \
+3  4 4  3
+```
+
+But the following [1,2,2,null,3,null,3] is not:
+
+```js
+    1
+   / \
+  2   2
+   \   \
+    3   3
+```
+
+Follow up: Solve it both recursively and iteratively.
+
+### Analyze
+
+Way1: Recursive:
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -32,4 +62,46 @@ function isMirror(leftNode, rightNode) {
     return false
   }
 }
+```
+
+Way2: Iterative:
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isSymmetric = function (root) {
+  if (!root) return true
+  if (!root.left && !root.right) return true
+  if (root.left !== root.right) return false
+
+  const stack = []
+
+  stack.push(root.right)
+  stack.push(root.left)
+
+  while (stack.length > 0) {
+    const popItemLeft = stack.pop()
+    const popItemRight = stack.pop()
+
+    if (popItemLeft.left !== popItemRight.right) {
+      return false
+    } else {
+
+    }
+
+    // if (node.left || node.right) {
+    //   if (node.left !== node.right) return false
+    //   stack.push()
+    // }
+  }
+};
 ```
