--- a/LeetCode/101.Symmetric_Tree.md
+++ b/LeetCode/101.Symmetric_Tree.md
@@ -67,6 +67,23 @@ function isMirror(leftNode, rightNode) {
 Way2: Iterative:
 
 ```js
+        1
+      /   \
+    2       2
+   / \     / \
+  3   4   4   3
+ / \ / \ / \ / \
+5  6 7 8 8 7 6  5
+
+```
+
+解析:
+
+* 第一步: `stack = [2, 2]`;
+* 第二步: 取出 `[2, 2]`, 推入 `[3, 3, 4, 4]`;
+* 第三步: 取出 `[4, 4]`, 。。。
+
+```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
@@ -92,16 +109,11 @@ var isSymmetric = function (root) {
     const popItemLeft = stack.pop()
     const popItemRight = stack.pop()
 
-    if (popItemLeft.left !== popItemRight.right) {
+    if (popItemLeft.left !== popItemRight.right || popItemLeft.right !== popItemRight.left) {
       return false
     } else {
-
+      stack.push(popItemRight.right, popItemLeft.left, popItemRight.left, popItemLeft.right)
     }
-
-    // if (node.left || node.right) {
-    //   if (node.left !== node.right) return false
-    //   stack.push()
-    // }
   }
 };
 ```
