--- a/LeetCode/101.Symmetric_Tree.md
+++ b/LeetCode/101.Symmetric_Tree.md
@@ -74,14 +74,18 @@ Way2: Iterative:
   3   4   4   3
  / \ / \ / \ / \
 5  6 7 8 8 7 6  5
-
 ```
 
 解析:
 
 * 第一步: `stack = [2, 2]`;
 * 第二步: 取出 `[2, 2]`, 推入 `[3, 3, 4, 4]`;
-* 第三步: 取出 `[4, 4]`, 。。。
+* 第三步: 取出 `[4, 4]`, 推入 `[7, 7, 8, 8]`;
+* 第四步: 取出 `[8, 8]`;
+* 第五步: 取出 `[7, 7]`, 取出 `[3, 3]`;
+* 第六步: 推入 `[5, 5, 6, 6]`;
+* 第七步: 取出 `[6, 6]`;
+* 第八步: 取出 `[5, 5]`;
 
 ```js
 /**
@@ -98,7 +102,7 @@ Way2: Iterative:
 var isSymmetric = function (root) {
   if (!root) return true
   if (!root.left && !root.right) return true
-  if (root.left !== root.right) return false
+  if (root.left && root.right && root.left.val !== root.right.val) return false
 
   const stack = []
 
@@ -109,11 +113,15 @@ var isSymmetric = function (root) {
     const popItemLeft = stack.pop()
     const popItemRight = stack.pop()
 
-    if (popItemLeft.left !== popItemRight.right || popItemLeft.right !== popItemRight.left) {
+    if (!popItemLeft && !popItemRight) continue
+    if (popItemLeft !== popItemRight) return false
+
+    if (popItemLeft.left && popItemLeft.right && popItemRight.left && popItemRight.right && popItemLeft.left.val !== popItemRight.right.val || popItemLeft.right.val !== popItemRight.left.val) {
       return false
-    } else {
-      stack.push(popItemRight.right, popItemLeft.left, popItemRight.left, popItemLeft.right)
     }
+    stack.push(popItemRight.right, popItemLeft.left, popItemRight.left, popItemLeft.right)
   }
+
+  return true
 };
 ```
