--- a/LeetCode/101.Symmetric_Tree.md
+++ b/LeetCode/101.Symmetric_Tree.md
@@ -100,6 +100,7 @@ Way2: Iterative:
  * @return {boolean}
  */
 var isSymmetric = function (root) {
+  debugger
   if (!root) return true
   if (!root.left && !root.right) return true
   if (root.left && root.right && root.left.val !== root.right.val) return false
@@ -114,11 +115,12 @@ var isSymmetric = function (root) {
     const popItemRight = stack.pop()
 
     if (!popItemLeft && !popItemRight) continue
-    if (popItemLeft !== popItemRight) return false
+    // if popItemLeft or popItemRight is null or popItemLeft.val !== popItemRight.val return false
+    if (!popItemLeft || !popItemRight || popItemLeft.val !== popItemRight.val) return false
 
-    if (popItemLeft.left && popItemLeft.right && popItemRight.left && popItemRight.right && popItemLeft.left.val !== popItemRight.right.val || popItemLeft.right.val !== popItemRight.left.val) {
-      return false
-    }
+    // if (popItemLeft.left && popItemLeft.right && popItemRight.left && popItemRight.right && popItemLeft.left.val !== popItemRight.right.val || popItemLeft.right.val !== popItemRight.left.val) {
+    //   return false
+    // }
     stack.push(popItemRight.right, popItemLeft.left, popItemRight.left, popItemLeft.right)
   }
 
