--- a/LeetCode/101.Symmetric_Tree.md
+++ b/LeetCode/101.Symmetric_Tree.md
@@ -26,7 +26,7 @@ Follow up: Solve it both recursively and iteratively.
 
 ### Analyze
 
-Way1: Recursive:
+解法一: 递归解法。
 
 ```js
 /**
@@ -64,7 +64,7 @@ function isMirror(leftNode, rightNode) {
 }
 ```
 
-Way2: Iterative:
+解法二: 迭代解法:
 
 ```js
         1
@@ -100,7 +100,6 @@ Way2: Iterative:
  * @return {boolean}
  */
 var isSymmetric = function (root) {
-  debugger
   if (!root) return true
   if (!root.left && !root.right) return true
   if (root.left && root.right && root.left.val !== root.right.val) return false
@@ -115,12 +114,8 @@ var isSymmetric = function (root) {
     const popItemRight = stack.pop()
 
     if (!popItemLeft && !popItemRight) continue
-    // if popItemLeft or popItemRight is null or popItemLeft.val !== popItemRight.val return false
     if (!popItemLeft || !popItemRight || popItemLeft.val !== popItemRight.val) return false
 
-    // if (popItemLeft.left && popItemLeft.right && popItemRight.left && popItemRight.right && popItemLeft.left.val !== popItemRight.right.val || popItemLeft.right.val !== popItemRight.left.val) {
-    //   return false
-    // }
     stack.push(popItemRight.right, popItemLeft.left, popItemRight.left, popItemLeft.right)
   }
 
