--- a/BasicSkill/basis/移动端场景知识.md
+++ b/BasicSkill/basis/移动端场景知识.md
@@ -4,6 +4,8 @@
 
 解决思路: 使用 `touchStart` 和 `touchEnd` 来取代 `click` 事件。
 
+> [相关链接](https://juejin.im/entry/6844903427147825165)
+
 ### 点击穿透
 
 点击 a 标签下的一个返回按钮, 触发了 a 中的 href 跳转
@@ -136,3 +138,12 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 * H5: 需要发版
 * 组件包: 不需要发版
 * 原生: 性能高
+
+### IOS && Android
+
+Anchor 组件
+
+```js
+// document.documentElement.scrollTop do effect in ios, and document.body.scrollTop do effect in android.
+const scrollTop = document.documentElement.scrollTop || document.body.scrollTop
+```
