--- a/LeetCode/110.Balanced_Binary_Tree.md
+++ b/LeetCode/110.Balanced_Binary_Tree.md
@@ -38,9 +38,9 @@ Return false.
 
 ### Analyze
 
-步骤拆分:
-
-* root.left && (root.left.left || root.left.right)、root.right && (root.right.left || root.right.right)
+* 自顶向下
+  * 终止条件: 当前访问节点为 null;
+  * 循环逻辑: 当前节点的左、右子节点都为 height-balanced;
 
 ```js
 /**
@@ -56,20 +56,12 @@ Return false.
  */
 var isBalanced = function(root) {
   if (!root) return true
-  rercursive(root)
+  return isBalanced(root.left) && isBalanced(root.right) && Math.abs(deep(root.left) - deep(root.right)) <= 1
 };
 
-var rercursive = (node) => {
-
-
-  const haveLeftNodeChildNotRightNode = () => node && node.left && (node.left.left || node.left.right) && !node.right
-  const haveRightNodeChildNotLeftNode = () => node && node.right && (node.right.left || node.right.right) && !node.left
-
-  if (haveLeftNodeChildNotRightNode() || haveRightNodeChildNotLeftNode()) {
-    return false
-  }
-
-  rercursive(node.left)
-  rercursive(node.right)
+// the thought is same as [104.Maximum Depth of Binary Tree](https://github.com/MuYunyun/blog/blob/master/LeetCode/104.Maximum_Depth_of_Binary_Tree.md)
+var deep = (node) => {
+  if (!node) return 0
+  return Math.max(deep(node.left), deep(node.right)) + 1
 }
 ```
