lc: 110 from bottom to top

--- a/LeetCode/110.Balanced_Binary_Tree.md
+++ b/LeetCode/110.Balanced_Binary_Tree.md
@@ -65,3 +65,49 @@ var deep = (node) => {
   return Math.max(deep(node.left), deep(node.right)) + 1
 }
 ```
+
+* 自底向上
+  * 策略: 提前终止
+
+```js
+       1
+      / \
+     2   2
+    / \
+   3   3
+  / \
+ 4   4
+```
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {boolean}
+ */
+var isBalanced = function(root) {
+  return deep(root) === -1 ? false : true
+};
+
+var deep = (node) => {
+  if (!node) return 0
+  const leftNode = deep(node.left)
+  if (leftNode === -1) return -1
+  const rightNode = deep(node.right)
+  if (rightNode === -1) return -1
+  return leftNode - rightNode <= 1 ? Math.max(leftNode, rightNode) + 1 : -1
+}
+```
+
+输入：
+[1,null,2,null,3]
+输出：
+true
+预期结果：
+false
