--- a/BasicSkill/basis/移动端场景知识.md
+++ b/BasicSkill/basis/移动端场景知识.md
@@ -141,9 +141,13 @@ box-shadow: 0px -1px 0px 0px rgba(245, 245, 245, 1);
 
 ### IOS && Android
 
+1. scrollTop 区分
+
 Anchor 组件
 
 ```js
 // document.documentElement.scrollTop do effect in ios, and document.body.scrollTop do effect in android.
 const scrollTop = document.documentElement.scrollTop || document.body.scrollTop
 ```
+
+2. font-weight 在安卓机上失效: 0 ~ 400 一种粗细, 500 ~ 900 一种粗细。
