--- a/LeetCode/110.Balanced_Binary_Tree.md
+++ b/LeetCode/110.Balanced_Binary_Tree.md
@@ -101,13 +101,6 @@ var deep = (node) => {
   if (leftNode === -1) return -1
   const rightNode = deep(node.right)
   if (rightNode === -1) return -1
-  return leftNode - rightNode <= 1 ? Math.max(leftNode, rightNode) + 1 : -1
+  return Math.abs(leftNode - rightNode) <= 1 ? Math.max(leftNode, rightNode) + 1 : -1
 }
 ```
-
-输入：
-[1,null,2,null,3]
-输出：
-true
-预期结果：
-false
