--- a/LeetCode/222.Count_Complete_Tree_Nodes.md
+++ b/LeetCode/222.Count_Complete_Tree_Nodes.md
@@ -1,6 +1,6 @@
 ### 222. Count Complete Tree Nodes
 
-Given a complete binary tree, count the number of nodes.
+Given a `complete binary tree`, count the number of nodes.
 
 Note:
 
@@ -22,6 +22,8 @@ Output: 6
 
 ### Analyze
 
+方式一: 递归
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -38,3 +40,38 @@ var countNodes = function(root) {
   if (!root) return 0
   return 1 + countNodes(root.left) + countNodes(root.right)
 };
+```
+
+方式二: 利用完全二叉树的性质解题
+
+根据题目给出的当前树是完全二叉树的限制, 可得到子树存在如下两点条件:
+
+* 若左子树的深度 = 右子树的深度, 则左子树为满二叉树;
+* 若左子树的深度 > 右子树的深度, 则右子树为满二叉树;
+
+根据上述分析简化递归次数
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number}
+ */
+var countNodes = function(root) {
+  const leftNode = deep(root.left)
+  const rightNode = deep(root.right)
+
+
+};
+
+var deep = function(node) {
+  if (!node) return 0
+  return Math.max(deep(node.left), deep(node.right)) + 1
+}
+```
