--- a/LeetCode/222.Count_Complete_Tree_Nodes.md
+++ b/LeetCode/222.Count_Complete_Tree_Nodes.md
@@ -42,14 +42,14 @@ var countNodes = function(root) {
 };
 ```
 
-方式二: 利用完全二叉树的性质解题
+方式二: 利用完全二叉树性质解题
 
 根据题目给出的当前树是完全二叉树的限制, 可得到子树存在如下两点条件:
 
-* 若左子树的深度 = 右子树的深度, 则左子树为满二叉树;
-* 若左子树的深度 > 右子树的深度, 则右子树为满二叉树;
+* 若左子树的深度 = 右子树的深度, 则`左子树为满二叉树`;
+* 若左子树的深度 > 右子树的深度, 则`右子树为满二叉树`;
 
-根据上述分析简化递归次数
+可以根据上述分析简化递归次数。
 
 ```js
 /**
@@ -64,14 +64,31 @@ var countNodes = function(root) {
  * @return {number}
  */
 var countNodes = function(root) {
-  const leftNode = deep(root.left)
-  const rightNode = deep(root.right)
+  if (!root) return 0
 
+  const leftDeep = deep(root.left)
+  const rightDeep = deep(root.right)
 
+  if (leftDeep === rightDeep) {
+    // the count of left node is Math.pow(2, leftDeep) - 1, so the total is
+    // Math.pow(2, leftDeep) - 1 + countNodes(root.right) + 1, 1 means parent node
+    return Math.pow(2, leftDeep) + countNodes(root.right)
+  } else {
+    return Math.pow(2, rightDeep) + countNodes(root.left)
+  }
 };
 
+// get the deep of current node cleverly with features of the complete tree.
 var deep = function(node) {
   if (!node) return 0
-  return Math.max(deep(node.left), deep(node.right)) + 1
+  let nodeVal = node
+  let count = 1
+
+  while (nodeVal.left) {
+    count++
+    nodeVal = nodeVal.left
+  }
+
+  return count
 }
 ```
