--- a/BasicSkill/fe_cloud/方法论.md
+++ b/BasicSkill/fe_cloud/方法论.md
@@ -7,3 +7,11 @@
 ### medium
 
 * [medium unliited](https://medium-unlimited.ml/download/): medium 文章阅读不设上限的插件
+
+### SWOT 分析
+
+S(strength)、W(weakness)、O(opportunity)、T(threat)
+
+工作中真实 case, 适不适合买菜业务:
+
+![](http://with.muyunyun.cn/5db89f1e0de373c0b2f6cce0df141cc0.jpg)
