--- a/LeetCode/112.Path_Sum.md
+++ b/LeetCode/112.Path_Sum.md
@@ -28,6 +28,16 @@ return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
 ### Analyze
 
 ```js
+      5
+     / \
+    4   8
+   /   / \
+  11  13  4
+ /  \      \
+7    2      1
+```
+
+```js
 /**
  * Definition for a binary tree node.
  * function TreeNode(val) {
@@ -41,12 +51,22 @@ return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
  * @return {boolean}
  */
 var hasPathSum = function(root, sum) {
-  if (!root && sum === 0) {
-    return true
-  }
-  hasPathSum(root.left, root.left ? sum - root.left : sum)
-  hasPathSum(root.right, root.right ? sum - root.right : sum)
-
+  if (!root && sum !== 0) return false
+  if (!root && sum === 0) return true
+  const leftResult = hasPathSum(root.left, root.left ? sum - root.left.val : sum)
+  if (leftResult) return true
+  const rightResult = hasPathSum(root.right, root.right ? sum - root.right.val : sum)
+  if (rightResult) return true
   return false
 };
+```
+
+```js
+输入：
+[]
+0
+输出：
+true
+预期：
+false
 ```
