--- a/BasicSkill/fe_cloud/方法论.md
+++ b/BasicSkill/fe_cloud/方法论.md
@@ -12,6 +12,9 @@
 
 S(strength)、W(weakness)、O(opportunity)、T(threat)
 
-工作中真实 case, 适不适合买菜业务:
+* 工作中真实 case, 适不适合买菜业务:
 
 ![](http://with.muyunyun.cn/5db89f1e0de373c0b2f6cce0df141cc0.jpg)
+
+* 把一件事情放到极致去推演
+  * 来源客服轮岗, 这笔应该商家、消费者承担。
