--- a/LeetCode/112.Path_Sum.md
+++ b/LeetCode/112.Path_Sum.md
@@ -51,22 +51,28 @@ return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
  * @return {boolean}
  */
 var hasPathSum = function(root, sum) {
-  if (!root && sum !== 0) return false
-  if (!root && sum === 0) return true
-  const leftResult = hasPathSum(root.left, root.left ? sum - root.left.val : sum)
+  if (!root) return false
+  return ifHasPathSum(root, sum)
+};
+
+var ifHasPathSum = function(node, sum) {
+  if (!node && sum !== 0) return false
+  if (!node && sum === 0) return true
+  const remainingVal = sum - node.val
+  const leftResult = ifHasPathSum(node.left, remainingVal)
   if (leftResult) return true
-  const rightResult = hasPathSum(root.right, root.right ? sum - root.right.val : sum)
+  const rightResult = ifHasPathSum(node.right, remainingVal)
   if (rightResult) return true
   return false
-};
+}
 ```
 
-```js
+```
 输入：
-[]
-0
+[1,2]
+1
 输出：
 true
-预期：
+预期结果：
 false
 ```
