--- a/LeetCode/112.Path_Sum.md
+++ b/LeetCode/112.Path_Sum.md
@@ -59,12 +59,18 @@ var ifHasPathSum = function(node, sum) {
   if (!node && sum !== 0) return false
   if (!node && sum === 0) return true
   const remainingVal = sum - node.val
-  const leftResult = ifHasPathSum(node.left, remainingVal)
+  const leftResult = ifHasPathSum(node.left, remainingVal) && !node.right
   if (leftResult) return true
-  const rightResult = ifHasPathSum(node.right, remainingVal)
+  const rightResult = ifHasPathSum(node.right, remainingVal) && !node.left
   if (rightResult) return true
   return false
 }
+```
+
+```js
+    1
+  /   \
+2     null
 ```
 
 ```
