--- a/LeetCode/112.Path_Sum.md
+++ b/LeetCode/112.Path_Sum.md
@@ -18,24 +18,11 @@ Given the below binary tree and sum = 22,
 7    2      1
 ```
 
-```js
-todo:
-var tree = createTree([5, 4, 8, 11, null, 13, 4, 7, 2, null, null, null, null, null, 1])
-```
-
 return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
 
 ### Analyze
 
-```js
-      5
-     / \
-    4   8
-   /   / \
-  11  13  4
- /  \      \
-7    2      1
-```
+使用递归的思路进行解题:
 
 ```js
 /**
@@ -53,32 +40,74 @@ return true, as there exist a root-to-leaf path 5->4->11->2 which sum is 22.
 var hasPathSum = function(root, sum) {
   if (!root) return false
   return ifHasPathSum(root, sum)
-};
+}
 
 var ifHasPathSum = function(node, sum) {
   if (!node && sum !== 0) return false
   if (!node && sum === 0) return true
   const remainingVal = sum - node.val
-  const leftResult = ifHasPathSum(node.left, remainingVal) && !node.right
+  const leftResult = ifHasPathSum(node.left, remainingVal)
   if (leftResult) return true
-  const rightResult = ifHasPathSum(node.right, remainingVal) && !node.left
+  const rightResult = ifHasPathSum(node.right, remainingVal)
   if (rightResult) return true
   return false
 }
 ```
 
+此时 ac, 卡在了以下测试用例中(此题的难点在于对递归终止条件的判断)
+
 ```js
     1
   /   \
-2     null
+null   2
 ```
 
+先对代码进行整理精简:
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} sum
+ * @return {boolean}
+ */
+var hasPathSum = function(root, sum) {
+  if (!root) return false
+  return ifHasPathSum(root, sum)
+}
+
+var ifHasPathSum = function(node, sum) {
+  if (!node) return sum === 0
+  const remainingVal = sum - node.val
+  return ifHasPathSum(node.left, remainingVal) || ifHasPathSum(node.right, remainingVal)
+}
 ```
-输入：
-[1,2]
-1
-输出：
-true
-预期结果：
-false
+
+终止条件应由`判断当前节点为空而且 sum === 0`调整为`判断当前节点为叶子节点且 node.val === sum`, 再次修正代码
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val) {
+ *     this.val = val;
+ *     this.left = this.right = null;
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} sum
+ * @return {boolean}
+ */
+var hasPathSum = function(root, sum) {
+  if (!root) return false
+  if (!root.left && !root.right) return root.val === sum
+  const remainingVal = sum - root.val
+  return hasPathSum(root.left, remainingVal) || hasPathSum(root.right, remainingVal)
+}
 ```
