--- a/BasicSkill/fe_cloud/方法论.md
+++ b/BasicSkill/fe_cloud/方法论.md
@@ -18,3 +18,10 @@ S(strength)、W(weakness)、O(opportunity)、T(threat)
 
 * 把一件事情放到极致去推演
   * 来源客服轮岗, 这笔应该商家、消费者承担。
+
+### 谁来做
+
+* 背景: 组件库大版本升级。是组件库同学负责升级给业务方升级还是业务方自行升级呢?
+* 方法论: 哪一方的依赖性越高谁来负责。
+* 结论: 组件库同学帮升级。
+
