--- a/LeetCode/257.Binary_Tree_Paths.md
+++ b/LeetCode/257.Binary_Tree_Paths.md
@@ -24,12 +24,26 @@ Explanation: All root-to-leaf paths are: 1->2->5, 1->3
 
 相对其它递归题目, 此题递归函数`返回数组`。
 
+* 提示: DFS
+  * 先序遍历: '' -> 1 -> 2 -> 5, '' -> 1 -> 3
+  * 中序遍历: 2 -> 5 -> 1 -> 3
+  * 后续遍历: 5 -> 2 -> 3 -> 4
+
 ```js
    1
  /   \
 2     3
  \
   5
+```
+
+```js
+    1
+  2
+```
+
+```js
+1 -> 2
 ```
 
 ```js
@@ -48,22 +62,23 @@ var binaryTreePaths = function(root) {
   const result = []
   if (!root) return result
 
-  result.push(root.val)
-  printTreePaths(root.left, result)
-  printTreePaths(root.right, result)
+  printTreePaths(root, result, 'root')
 
   return result
 }
 
-var printTreePaths = function(node, arr) {
+var printTreePaths = function(node, result, tag) {
   if (!node.left && !node.right) {
-    arr.map(val => {
-      return val += `->${node.val}`
-    })
+    if (tag === 'root') return node.val
+    return `->${node.val}`
   }
 
   if (node.left) {
-    printTreePaths(node.left)
+    return node.val + printTreePaths(node.left, result)
+  }
+
+  if (node.right) {
+    return node.val + printTreePaths(node.right, result)
   }
 }
 ```
