--- a/LeetCode/257.Binary_Tree_Paths.md
+++ b/LeetCode/257.Binary_Tree_Paths.md
@@ -22,29 +22,8 @@ Explanation: All root-to-leaf paths are: 1->2->5, 1->3
 
 ### Analyze
 
-相对其它递归题目, 此题递归函数`返回数组`。
-
-* 提示: DFS
-  * 先序遍历: '' -> 1 -> 2 -> 5, '' -> 1 -> 3
-  * 中序遍历: 2 -> 5 -> 1 -> 3
-  * 后续遍历: 5 -> 2 -> 3 -> 4
-
-```js
-   1
- /   \
-2     3
- \
-  5
-```
-
-```js
-    1
-  2
-```
-
-```js
-1 -> 2
-```
+* DFS 深度优先遍历的运用, 关键需要想清楚采用先序、中序、后序遍历中的哪一种。
+  * 先序遍历: 1 -> 2 -> 5, 1 -> 3
 
 ```js
 /**
@@ -62,23 +41,25 @@ var binaryTreePaths = function(root) {
   const result = []
   if (!root) return result
 
-  printTreePaths(root, result, 'root')
-
+  printTreePaths(root, result, '')
   return result
 }
 
-var printTreePaths = function(node, result, tag) {
+var printTreePaths = function(node, result, str) {
   if (!node.left && !node.right) {
-    if (tag === 'root') return node.val
-    return `->${node.val}`
+    str += `${node.val}`
+    result.push(str)
+    return
   }
 
+  str += `${node.val}->`
+
   if (node.left) {
-    return node.val + printTreePaths(node.left, result)
+    printTreePaths(node.left, result, str)
   }
 
   if (node.right) {
-    return node.val + printTreePaths(node.right, result)
+    printTreePaths(node.right, result, str)
   }
 }
 ```
