--- a/LeetCode/113.Path_Sum_II.md
+++ b/LeetCode/113.Path_Sum_II.md
@@ -29,7 +29,7 @@ Return:
 
 ### Analyze
 
-1. DFS
+思路: 结合 DFS 中的先序遍历将所有解推入数组中。
 
 ```js
 /**
@@ -53,27 +53,28 @@ var pathSum = function(root, sum) {
   })
 };
 
+/**
+ * node: analyze node
+ * str: join str using '->', affected by [257.Binary Tree Paths](https://github.com/MuYunyun/blog/blob/master/LeetCode/257.Binary_Tree_Paths.md)
+ * result: result array
+ * extra: extra sum need to satisfy
+ */
 var analyzeSum = function(node, str, result, extra) {
   if (!node) return
   if (!node.left && !node.right && extra === node.val) {
     str += node.val
     result.push(str)
-    console.log('str', str)
     return
   }
 
   str += `${node.val}->`
 
-  if (extra - node.val < 0) return
   analyzeSum(node.left, str, result, extra - node.val)
   analyzeSum(node.right, str, result, extra - node.val)
 }
 ```
 
-输入：
-[-2,null,-3]
--5
-输出：
-[]
-预期结果：
-[[-2,-3]]
+### link
+
+* [112](https://github.com/MuYunyun/blog/blob/master/LeetCode/112.Path_Sum.md)
+* [257](https://github.com/MuYunyun/blog/blob/master/LeetCode/257.Binary_Tree_Paths.md)
