--- a/LeetCode/129.Sum_Root_to_Leaf_Numbers.md
+++ b/LeetCode/129.Sum_Root_to_Leaf_Numbers.md
@@ -45,6 +45,8 @@ Therefore, sum = 495 + 491 + 40 = 1026.
 
 ### Analyze
 
+递归解题
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -59,13 +61,14 @@ Therefore, sum = 495 + 491 + 40 = 1026.
  */
 var sumNumbers = function(root) {
   const analyzeObj = { sum: 0 }
-  if (!root) return sum
+  if (!root) return analyzeObj.sum
 
   analyzeSum(root, '', analyzeObj)
   return analyzeObj.sum
 };
 
 var analyzeSum = function(node, str, analyzeObj) {
+  if (!node) return
   if (!node.left && !node.right) {
     str += String(node.val)
     analyzeObj.sum = analyzeObj.sum + parseInt(str, 10)
@@ -78,3 +81,7 @@ var analyzeSum = function(node, str, analyzeObj) {
   analyzeSum(node.right, str, analyzeObj)
 }
 ```
+
+### Similar Title
+
+113、257
