--- a/BasicSkill/readES6/模块.md
+++ b/BasicSkill/readES6/模块.md
@@ -38,7 +38,7 @@ import { a } from './xxx' // 编译成 CommonJS: require('./xxx').a
 
 #### 获取模块的差异
 
-在 CommonJS 中, 获取的是一个值/模块的拷贝, 见如下例子:
+在 CommonJS 中, 获取的是一个`值/模块的拷贝`, 见如下例子:
 
 ```js
 // test.js
@@ -60,7 +60,7 @@ console.log(a)
 // 执行 node test2.js, 输出结果为 1 1
 ```
 
-在 ES6 中, 获取的是一个值/模块的引用, 见如下例子:
+在 ES6 中, 获取的是一个`值/模块的引用`, 见如下例子:
 
 ```js
 // test.js
