--- a/LeetCode/437.Path_Sum_III.md
+++ b/LeetCode/437.Path_Sum_III.md
@@ -30,6 +30,8 @@ Return 3. The paths that sum to 8 are:
 
 ### 题解
 
+遍历解题, 此题的难点需想清每个节点都要当作`根节点`来对待。
+
 ```js
 /**
  * Definition for a binary tree node.
@@ -45,11 +47,44 @@ Return 3. The paths that sum to 8 are:
  * @return {number}
  */
 var pathSum = function(root, sum) {
-  let temp = { sum: 0 }
-  if (!root) return temp.sum
+  if (!root) return 0
+  let result = { total: 0, sum }
+  analyzeSum(root, result, sum)
+  return result.total
 };
 
-var analyzeSum = function(node) {
+var analyzeSum = function(node, result, sum) {
+  if (!node) return
+  const extraSum = sum - node.val
+  if (extraSum === 0) {
+    console.log('sum', sum, 'node.val', node.val)
+    result.total = result.total + 1
+  }
 
+  analyzeSum(node.left, result, extraSum)
+  analyzeSum(node.right, result, extraSum)
+  // handle it as root node.
+  analyzeSum(node.left, result, result.sum)
+  analyzeSum(node.right, result, result.sum)
 }
 ```
+
+submit 后, 卡在了如下测试用例中:
+
+```js
+输入:
+[1,null,2,null,3] // 该测试用例有点怪, 应该为 [1, null, 2, null, null, null, 3]
+3
+
+       1
+     /   \
+  null    2
+        /   \
+      null    3
+
+输出：
+3
+预期：
+2
+```
+
